--- a/P5-Website-Template-mainFINAL/index.html
+++ b/P5-Website-Template-mainFINAL/index.html
@@ -29,7 +29,7 @@
   ></script>
 
   <!-- Load the sketch -->
-  <script src="./CLASS_NAME_GOES_HERE.js"></script>
+  <script src="./classX.js"></script>
   <script src="./sketch.js"></script>
 
   <!-- End HTML -->
